--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -26,7 +26,12 @@ f
         <extension>css</extension>
         <mime-type>text/css</mime-type>
     </mime-mapping>
-
+    <jsp-config>
+        <taglib>
+            <taglib-uri>http://java.sun.com/jsp/jstl/core</taglib-uri>
+            <taglib-location>/WEB-INF/lib/jstl-1.2.jar</taglib-location>
+        </taglib>
+    </jsp-config>
     <servlet>
         <servlet-name>LoginServlet</servlet-name>
         <servlet-class>com.optima.demo12.Http.LoginServlet</servlet-class>
