--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -57,7 +57,6 @@
         <servlet-name>AddEmpServlet</servlet-name>
         <servlet-class>com.optima.demo12.Http.AddEmpServlet</servlet-class>
     </servlet>
-
     <servlet-mapping>
         <servlet-name>AddEmpServlet</servlet-name>
         <url-pattern>/admin/AddEmployee</url-pattern>
@@ -68,7 +67,6 @@
         <servlet-name>EditEmpServlet</servlet-name>
         <servlet-class>com.optima.demo12.Http.EditEmpServlet</servlet-class>
     </servlet>
-
     <servlet-mapping>
         <servlet-name>EditEmpServlet</servlet-name>
         <url-pattern>/admin/EditEmployee/</url-pattern>
@@ -79,20 +77,31 @@
         <servlet-name>DeleteEmpServlet</servlet-name>
         <servlet-class>com.optima.demo12.Http.DeleteEmpServlet</servlet-class>
     </servlet>
-
     <servlet-mapping>
         <servlet-name>DeleteEmpServlet</servlet-name>
         <url-pattern>/admin/DeleteEmployee/</url-pattern>
     </servlet-mapping>
 
+
     <servlet>
         <servlet-name>LogoutServlet</servlet-name>
         <servlet-class>com.optima.demo12.Http.LogoutServlet</servlet-class>
     </servlet>
-
     <servlet-mapping>
         <servlet-name>LogoutServlet</servlet-name>
         <url-pattern>/admin/LogoutServlet/</url-pattern>
+    </servlet-mapping>
+
+
+
+
+    <servlet>
+        <servlet-name>ReservationServlet</servlet-name>
+        <servlet-class>com.optima.demo12.Http.ReservationServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ReservationServlet</servlet-name>
+        <url-pattern>/admin/Reservation/</url-pattern>
     </servlet-mapping>
 
 
